# cfb-index

./: .env.example  .gitignore  .vercelignore  404.html  AGENTS.md  CFB_INDEX_AUDIT.md  CFB_INDEX_IDENTITY_PRODUCTION_PLAYBOOK.md  CFB_INDEX_VISUAL_SYSTEM_CONCEPT.md  CFB_Index_Fan_Intelligence_One_Pager.docx  CHATGPT_VISUAL_SYSTEM_CONTINUATION_PROMPT.md  CHATGPT_VISUAL_SYSTEM_RUNBOOK.md  CHRONICLE_QUALITY_PROPOSAL_v3.md  CLAUDE.md  CLAUDE_CODE_AUTONOMY_AND_TOKEN_CONTRACT.md  CLAUDE_CODE_CHRONICLE_REBUILD.md  CLAUDE_CODE_FAN_INTEL_WIRE_UP.md  CLAUDE_CODE_FIX_CLOBBER.md  CLAUDE_CODE_KICKOFF_FAN_INTEL.md  CLAUDE_CODE_KICKOFF_FRONTEND.md  CLAUDE_CODE_KICKOFF_PLAYER_DATA.md  CLAUDE_CODE_KICKOFF_PLAYER_MENTION.md  CLAUDE_CODE_KICKOFF_TEAM_PAGE_BETS.md  CLAUDE_CODE_LAUNCH_ROADMAP.md  CLAUDE_CODE_PATCH_FRONTEND_RESUME.md  CLAUDE_CODE_PATCH_OFFSEASON_HOTFIX.md  CLAUDE_CODE_PROMPT_PHASE3AB.md  CLAUDE_CODE_PROMPT_RESTORE_CORRUPTED_REPO.md  CLAUDE_CODE_TEAM_PAGE_SPRINT.md  CLAUDE_CODE_TEAM_PAGE_SPRINT_4.md  CLAUDE_CODE_TEAM_PAGE_SPRINT_6_GAMEDAY.md  CLAUDE_CODE_THE_DAILY.md  CLAUDE_CODE_THE_MAILBAG.md  CLAUDE_CODE_THE_REACTION_STORY.md  CLAUDE_CODE_V5_IMPLEMENTATION_PROMPT.md  CODEX_CHRONICLE_QUALITY_BRIEF.md  CODEX_RETRO_IMPLEMENTATION_BRIEF.md  CODEX_RETRO_REVIEW_PROMPT.md  COORDINATION.md  DATA_SOURCES_EXPLAINED.md  DECISIONS.md  (+72 more)
.claude/: launch.json  render_players_only.py  settings.json
about/: index.html
about-model/: index.html
archive/: 2014-week-04.html  2014-week-08.html  2014-week-12.html  2014-week-20.html  2015-week-04.html  2015-week-08.html  2015-week-12.html  2015-week-15.html  2015-week-20.html  2016-week-15.html  2016-week-20.html  2017-week-15.html  2017-week-19.html  2018-week-15.html  2018-week-19.html  2019-week-15.html  2019-week-20.html  2020-week-04.html  2020-week-08.html  2020-week-12.html  2020-week-15.html  2020-week-16.html  2020-week-38.html  2021-week-04.html  2021-week-08.html  2021-week-12.html  2021-week-15.html  2021-week-16.html  2021-week-20.html  2022-week-04.html  2022-week-08.html  2022-week-12.html  2022-week-15.html  2022-week-16.html  2022-week-20.html  2023-week-04.html  2023-week-08.html  2023-week-12.html  2023-week-15.html  (+17 more)
(+60412 files in other folders)
