[project]
name = "cfb-rankings"
version = "0.1.0"
description = "All-division college football rankings backend for SportsDB + CollegeFootballData"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy>=1.26,<2.0",
  "requests>=2.32.0",
  "vaderSentiment>=3.3.2,<4.0",
  "PyYAML>=6.0",
  "anthropic>=0.40.0",
]

[project.scripts]
cfb-rankings = "cfb_rankings.cli:main"

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
