[project]
name = "cfb-rankings"
version = "0.1.0"
description = "All-division college football rankings backend for SportsDB + CollegeFootballData"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy>=1.26,<2.0",
  "requests>=2.32.0",
  "vaderSentiment>=3.3.2,<4.0",
  "PyYAML>=6.0",
  "anthropic>=0.40.0",
  # bs4 + lxml imported by src/cfb_rankings/ingest/sources/wiki_awards.py
  # for the Wikipedia honors scraper. Without these the `scrape-wiki-awards`
  # CLI fails ModuleNotFoundError on import. Added 2026-05-15 after
  # world_class_enrich.yml runs 25942058001 + 25942691409 silent-failed.
  "beautifulsoup4>=4.12.0",
  "lxml>=5.0.0",
  # feedparser used by ingest/sources RSS adapters (locked_on, beat_writers,
  # campus_news, athletics, substack). Added defensively — same missing-dep
  # class of bug was about to bite the daily-cron pipeline.
  "feedparser>=6.0.0",
  # tzdata supplies the IANA tz database for zoneinfo. Linux runners get it from
  # the OS, but Windows has no system tz DB, so ZoneInfo("America/New_York") in
  # ingest/conversation.py raises ZoneInfoNotFoundError at import without this.
  # Required for the 24/7 Windows box's fan-intel/conversation ingest. Added 2026-06-08.
  "tzdata>=2024.1",
]

[project.scripts]
cfb-rankings = "cfb_rankings.cli:main"

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
